--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,4 +2,5 @@
 	<% if current_user %>
 		<%= link_to t('logout.link'), dashboard_logout_path, method: :post %>
 	<% end %>
+	<%= link_to t('home'), root_path %>
 </header>
