--- a/app/views/dashboard/welcome/show.html.erb
+++ b/app/views/dashboard/welcome/show.html.erb
@@ -1,5 +1,5 @@
 <%= current_user.email %>
 <%= link_to t('event.create.link'), new_dashboard_user_event_path(current_user)  %>
 <%= link_to t('user.edit.link'), edit_dashboard_user_path(current_user) %>
-<div id="calendar_2"></div>
-
+<%= link_to t('all_events'), dashboard_all_events_path %>
+<div id="calendar"></div>
