--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  * file per style scope.
  *
  *= require fullcalendar
+ *= require bootstrap-datepicker3
  *= require recurring_select
  *= require_tree .
  *= require_self
