--- a/app/views/dashboard/events/_form.html.erb
+++ b/app/views/dashboard/events/_form.html.erb
@@ -7,7 +7,7 @@
   <%= f.text_field :title %>
 
   <%= f.label :date %>
-  <%= f.date_select :date %>
+  <%= f.text_field :date , class: "datepicker" %>
   <%= f.select_recurring :recurring_rule %>
   <%= f.submit %>
 <% end %>
