fix all occur's

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
 <header>
+<%= console %>
 	<% if current_user %>
 		<%= link_to t('logout.link'), dashboard_logout_path, method: :post %>
 	<% end %>
