--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -9,8 +9,12 @@ nav.navbar.navbar-inverse
           = link_to t('home'), root_path
         li
           = link_to t('event.create.link'), new_dashboard_user_event_path(current_user)
-        li
-          = link_to t('all_events'), dashboard_all_events_path
+        - unless params[:all].present?
+          li.all_event
+            = link_to t('all_events'), dashboard_welcome_path(:all => "1")
+        -else
+          li.my_event
+            = link_to 'My events', dashboard_welcome_path
     ul.nav.navbar-nav.navbar-right
       - if current_user
         li
