--- a/app/views/dashboard/events/_form.html.slim
+++ b/app/views/dashboard/events/_form.html.slim
@@ -2,14 +2,16 @@
   = render "shared/errors", item: @event
 = simple_form_for @event, url: dashboard_user_events_path do |f|
   .row
-    .col-xs-3
+    .col-xs-4
       = f.input :title
   .row
-    .col-xs-3
-      = f.input :date , class: "datepicker"
-  .row
-    .col-xs-4
+    .col-xs-2
+      = f.label :date
+      = f.text_field :date , class: "datepicker"
+    .col-xs-2
+      = f.label :recurring_rule
       = f.select_recurring :recurring_rule
+  br
   .row
     .col-xs-4
       = f.button :submit
