--- a/app/views/dashboard/events/new.html.slim
+++ b/app/views/dashboard/events/new.html.slim
@@ -1,1 +1,4 @@
-= render "form"
+- if @event.errors.any?
+  = render "shared/errors", item: @event
+= render partial: "form", locals: { event: @event , url: dashboard_user_events_path}
+
