--- a/app/views/dashboard/events/edit.html.slim
+++ b/app/views/dashboard/events/edit.html.slim
@@ -1,17 +1,3 @@
 - if @event.errors.any?
   = render "shared/errors", item: @event
-= simple_form_for [current_user, @event], url: dashboard_user_event_path do |f|
-  .row
-    .col-xs-4
-      = f.input :title
-  .row
-    .col-xs-2
-      = f.label :date
-      = f.text_field :date , class: "datepicker", :value => @event.date.strftime("%d.%m.%Y")
-    .col-xs-2
-      = f.label :recurring_rule
-      = f.select_recurring :recurring_rule
-  br
-  .row
-    .col-xs-2
-      = f.button :submit
+= render partial: "form", locals: { event: [current_user, @event], url: dashboard_user_event_path }
