event controller spec

--- a/app/views/home/welcome/index.html.slim
+++ b/app/views/home/welcome/index.html.slim
@@ -1,3 +1,6 @@
-.center-block
-  .text-center = t('main_text_html')
-  .text-center = render partial: 'home/user_sessions/form'
+row
+  .col-md-6.col-md-offset-3.text-center
+      = t('main_text')
+row
+  .col-md-6.col-md-offset-3.text-center
+    = render partial: 'home/user_sessions/form'
