--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,8 +1,7 @@
 nav.navbar.navbar-inverse
   .container-fluid
     .navbar-header
-      a.navbar-brand[href="/"]
-        | MyCalendar
+      a.navbar-brand[href="/"] = t('main_title')
     ul.nav.navbar-nav
       - if current_user
         li
@@ -14,7 +13,7 @@ nav.navbar.navbar-inverse
             = link_to t('all_events'), dashboard_welcome_path(:all => "1")
         -else
           li.my_event
-            = link_to 'My events', dashboard_welcome_path
+            = link_to t('my_events'), dashboard_welcome_path
     ul.nav.navbar-nav.navbar-right
       - if current_user
         li
